--- a/index.html
+++ b/index.html
@@ -1,148 +1,85 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="Cache-Control" content="no-cache">
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="Cache-Control" content="no-cache" />
 
-        <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-        <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-        <meta name="apple-mobile-web-app-capable" content="yes">
-        <meta name="mobile-web-app-capable" content="yes">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="mobile-web-app-capable" content="yes" />
 
-        <link rel="apple-touch-icon" href="logo.png">
-        <link rel="icon" href="logo.png">
+    <link rel="apple-touch-icon" href="logo.png" />
+    <link rel="icon" href="logo.png" />
 
-        <title>WebGL Fluid Simulation</title>
-        <meta name="description" content="A WebGL fluid simulation that works in mobile browsers.">
+    <title>WebGL Fluid Simulation</title>
+    <meta name="description" content="A WebGL fluid simulation that works in mobile browsers." />
 
-        <meta property="og:type" content="website">
-        <meta property="og:title" content="Webgl Fluid Simulation">
-        <meta property="og:description" content="A WebGL fluid simulation that works in mobile browsers.">
-        <script type="text/javascript" src="js/dat.gui.min.js"></script>
-        <style>
-            * {
-                user-select: none;
-            }
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Webgl Fluid Simulation" />
+    <meta property="og:description" content="A WebGL fluid simulation that works in mobile browsers." />
+    <script type="text/javascript" src="js/dat.gui.min.js"></script>
+    <style>
+      * {
+        user-select: none;
+      }
 
-            html, body {
-                overflow: hidden;
-                background-color: #00000000;
-            }
+      html,
+      body {
+        overflow: hidden;
+        background-color: #000;
+      }
 
-            body {
-                margin: 0;
-                position: fixed;
-                width: 100%;
-                height: 100%;
-                background-size: 100% 100%;
-            }
+      body {
+        margin: 0;
+        position: fixed;
+        width: 100%;
+        height: 100%;
+        background-repeat: no-repeat;
+        background-size: 100% 100%;
+        background-position: center;
+      }
 
-            canvas {
-                width: 100%;
-                height: 100%;
-            }
+      canvas {
+        width: 100%;
+        height: 100%;
+      }
 
-            .dg {
-                opacity: 0.9;
-            }
+      #videoBackground {
+        position: absolute;
+        z-index: -1;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        overflow: hidden;
+        object-fit: fill;
+      }
 
-            .dg .property-name {
-                overflow: visible;
-            }
+      #overlay {
+        pointer-events: none;
+        position: fixed;
+        width: 25%;
+        height: 25%; 
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        background-size: contain;
+        background-position: center;
+        background-repeat: no-repeat;
+      }
+    </style>
+  </head>
 
-            @font-face {
-                font-family: 'iconfont';
-                src: url('iconfont.ttf') format('truetype');
-            }
-
-            .bigFont {
-                font-size: 150%;
-                color: #8C8C8C;
-            }
-
-            .cr.function.appBigFont {
-                font-size: 150%;
-                line-height: 27px;
-                color: #A5F8D3;
-                background-color: #023C40;
-            }
-
-            .cr.function.appBigFont .property-name {
-                float: none;
-            }
-
-            .cr.function.appBigFont .icon {
-                position: sticky;
-                bottom: 27px;
-            }
-
-            .icon {
-                font-family: 'iconfont';
-                font-size: 130%;
-                float: right;
-            }
-
-            .twitter:before {
-                content: 'a';
-            }
-
-            .github:before {
-                content: 'b';
-            }
-
-            .app:before {
-                content: 'c';
-            }
-
-            .discord:before {
-                content: 'd';
-            }
-
-            @media (horizontal-viewport-segments: 1) {
-                oneclock {
-                    display: block;
-                }
-                dbclock {
-                    display: none;
-                }
-            }
-
-            @media (horizontal-viewport-segments: 2) {
-                oneclock {
-                    display: none;
-                }
-                dbclock {
-                    display: block;
-                }
-            }
-
-        </style>
-    </head>
-    
-    <body style="width: 100vw;height: 100vh;">
-        
-
-        <iframe class="oneclock" style="position: fixed;background-color:#00000000;top: 0;left: 0;width: 100vw;height: 100vh;z-index:0"
-            src="./clock/index.html" 
-            allowtransparency="true"
-            frameborder="0" width="50vw" height="100vh" scrolling="no">
-        </iframe>
-        <iframe class="dbclock" style="position: fixed;background-color:#00000000;top: 0;left: 0;width: 50vw;height: 100vh;z-index:0"
-            src="./clock/index.html" 
-            allowtransparency="true"
-            frameborder="0" width="50vw" height="100vh" scrolling="no">
-        </iframe>
-        <iframe class="dbclock" style="position: fixed;background-color:#00000000;top: 0;left: 50vw;width: 50vw;height: 100vh;z-index:0"
-            src="./clock/index.html" 
-            allowtransparency="true"
-            frameborder="0" width="50vw" height="100vh" scrolling="no">
-        </iframe>
-
-        <canvas style="position: fixed;z-index: 9999;"></canvas>
-        <script src="js/script.js"></script>
-
-
-    </body>
-
-
+  <body>
+    <iframe style="position: fixed;background-color:#00000000;top: 0;left: 0;width: 100vw;height: 100vh;z-index: -1;"
+        src="clock/index.html" 
+        allowtransparency="true"
+        frameborder="0" width="50vw" height="100vh" scrolling="no">
+    </iframe>
+    <canvas></canvas>
+    <video id="videoBackground" muted loop></video>
+    <div id="overlay"></div>
+    <script src="js/script.js"></script>
+  </body>
 </html>
