--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
   <body>
     <iframe style="position: fixed;background-color:#00000000;top: 0;left: 0;width: 100vw;height: 100vh;z-index: -1;"
-        src="clock/index.html" 
+        src="./clock.html" 
         allowtransparency="true"
         frameborder="0" width="50vw" height="100vh" scrolling="no">
     </iframe>
