--- a/index.html
+++ b/index.html
@@ -1,85 +1,89 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="Cache-Control" content="no-cache" />
 
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
-    <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="mobile-web-app-capable" content="yes" />
+<head>
+  <meta charset="utf-8" />
+  <meta http-equiv="Cache-Control" content="no-cache" />
 
-    <link rel="apple-touch-icon" href="logo.png" />
-    <link rel="icon" href="logo.png" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="mobile-web-app-capable" content="yes" />
 
-    <title>WebGL Fluid Simulation</title>
-    <meta name="description" content="A WebGL fluid simulation that works in mobile browsers." />
+  <link rel="apple-touch-icon" href="logo.png" />
+  <link rel="icon" href="logo.png" />
 
-    <meta property="og:type" content="website" />
-    <meta property="og:title" content="Webgl Fluid Simulation" />
-    <meta property="og:description" content="A WebGL fluid simulation that works in mobile browsers." />
-    <script type="text/javascript" src="js/dat.gui.min.js"></script>
-    <style>
-      * {
-        user-select: none;
-      }
+  <title>WebGL Fluid Simulation</title>
+  <meta name="description" content="A WebGL fluid simulation that works in mobile browsers." />
 
-      html,
-      body {
-        overflow: hidden;
-        background-color: #000;
-      }
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="Webgl Fluid Simulation" />
+  <meta property="og:description" content="A WebGL fluid simulation that works in mobile browsers." />
+  <script type="text/javascript" src="js/dat.gui.min.js"></script>
+  <style>
+    * {
+      user-select: none;
+    }
 
-      body {
-        margin: 0;
-        position: fixed;
-        width: 100%;
-        height: 100%;
-        background-repeat: no-repeat;
-        background-size: 100% 100%;
-        background-position: center;
-      }
+    html,
+    body {
+      overflow: hidden;
+      background-color: #000;
+    }
 
-      canvas {
-        width: 100%;
-        height: 100%;
-      }
+    body {
+      margin: 0;
+      position: fixed;
+      width: 100%;
+      height: 100%;
+      background-repeat: no-repeat;
+      background-size: 100% 100%;
+      background-position: center;
+    }
 
-      #videoBackground {
-        position: absolute;
-        z-index: -1;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        overflow: hidden;
-        object-fit: fill;
-      }
+    iframe {
+      pointer-events: none;
+    }
 
-      #overlay {
-        pointer-events: none;
-        position: fixed;
-        width: 25%;
-        height: 25%; 
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        background-size: contain;
-        background-position: center;
-        background-repeat: no-repeat;
-      }
-    </style>
-  </head>
+    canvas {
+      width: 100%;
+      height: 100%;
+    }
 
-  <body>
-    <iframe style="position: fixed;background-color:#00000000;top: 0;left: 0;width: 100vw;height: 100vh;z-index: -1;"
-        src="./bg.html" 
-        allowtransparency="true"
-        frameborder="0" width="50vw" height="100vh" scrolling="no">
-    </iframe>
-    <canvas></canvas>
-    <video id="videoBackground" muted loop></video>
-    <div id="overlay"></div>
-    <script src="js/script.js"></script>
-  </body>
+    #videoBackground {
+      position: absolute;
+      z-index: -1;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      overflow: hidden;
+      object-fit: fill;
+    }
+
+    #overlay {
+      pointer-events: none;
+      position: fixed;
+      width: 25%;
+      height: 25%;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      background-size: contain;
+      background-position: center;
+      background-repeat: no-repeat;
+    }
+  </style>
+</head>
+
+<body>
+  <iframe style="position: fixed;background-color: transparent;top: 0;left: 0;width: 100vw;height: 100vh;z-index: 999;pointer-events: none;"
+    src="./bg.html" allowtransparency="true" frameborder="0" width="100vw" height="100vh" scrolling="no">
+  </iframe>
+  <canvas></canvas>
+  <video id="videoBackground" muted loop></video>
+  <div id="overlay"></div>
+  <script src="js/script.js"></script>
+</body>
+
 </html>
