--- a/clock/index.html
+++ b/clock/index.html
@@ -12,11 +12,32 @@
 	<script type="text/javascript" src="jquery.min.js"></script>
 	<script type="text/javascript" src="colpick.js"></script>
 	<link rel="stylesheet" type="text/css" href="colpick.css" />
+
+	<style type="text/css">
+		@media screen and (orientation: portrait) {
+			.date {
+				margin: auto;
+				margin-top: calc(100vh / 2 + min(100vw, 100vh) / 2 * 0.9);
+				font-size: 48px;
+				color: white;
+			}
+		}
+
+		@media screen and (orientation: landscape) {
+			.date {
+				position: fixed;
+				left: calc(100vw / 2 + min(100vw, 100vh) / 2 * 0.7);
+				top: calc(100vh / 2 + min(100vw, 100vh) / 2 * 0.7);
+				font-size: 48px;
+				color: white;
+			}
+		}
+	</style>
 </head>
 
 <body style="overflow:hidden;">
 
-	<div id="ds">
+	<!-- <div id="ds">
 		<span><button id="pisker">bgcolor</button></span><br />
 		<span><button id="text1">text1</button></span><br />
 		<span><button id="text2">text2</button></span><br />
@@ -54,7 +75,7 @@
 
 		});
 
-	</script>
+	</script> -->
 
 	<!--!!!!!!!!!!!!!!-->
 
@@ -80,19 +101,30 @@
 			</div>
 		</div>
 	</div>
+	<div style="position:fixed;display: flex;align-items: center; width: 100%; height: 100%;">
+		<div id="date" class="date">
+
+		</div>
+	</div>
 
 	<script src="js/index.js"></script>
 	<!--!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!-->
 	<script type="text/javascript">
 
-		document.getElementById('btn').onclick = function () {
-			document.getElementById('color').click();
-		};
+		// document.getElementById('btn').onclick = function () {
+		// 	document.getElementById('color').click();
+		// };
 
-		document.getElementById('color').onchange = function () {
-			document.body.style.background = this.value;
-		};
+		// document.getElementById('color').onchange = function () {
+		// 	document.body.style.background = this.value;
+		// };
 
+		function updateDate() {
+			var now = new Date();
+			document.getElementById('date').innerText = now.getFullYear() + "-" + (now.getMonth() + 1) + '-' + now.getDate();
+		}
+		// updateDate();
+		// setInterval(updateDate, 60000)
 
 	</script>
 </body>
